# IC40Testing

./: .gitignore  BasicPacketProcessor.cpp  BasicPacketProcessor.h  CMakeLists.txt  LICENSE  README.md  SWGCmd.cpp  SWGCmd.h  SWGPacket.cpp  SWGPacket.h  main.cpp
SerialIOLib/: CMakeLists.txt  SerialIO.cpp  SerialIO.h
plog/include/plog/: Util.h
plog/include/plog/Formatters/: CsvFormatter.h  TxtFormatter.h
